--- a/wheel/index.html
+++ b/wheel/index.html
@@ -29,6 +29,7 @@
     </div>
   </div>
 
-  <script src="./app.js"></script>
+  <script src="./wheel/wheel/wheel/app.js"></script>
+
 </body>
 </html>
