Fix script source path in index.html

--- a/wheel/index.html
+++ b/wheel/index.html
@@ -29,7 +29,6 @@
     </div>
   </div>
 
-  <script src="./wheel/wheel/wheel/app.js"></script>
-
+  <script src="../wheel/wheel/app.js
 </body>
 </html>
